A bunch of stuff man

--- a/hackathons/fuseLearn/flashcards/flashcards.html
+++ b/hackathons/fuseLearn/flashcards/flashcards.html
@@ -41,7 +41,8 @@
             <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">r</div>
         </div>
         <div class="subTitle">Click a card
-            to toggle visibility, double click to delete it.</div>
+            to toggle visibility, double click to delete it. | Don't create multiple cards that share the same
+            question/answer.</div>
 
         <div class="horizontalLayout" style="column-gap: 20px; animation: riseLoad 2s ease 0s 1 normal backwards;">
             <input type="text" placeholder="Type in your card's question" id="question-entry-box" />
