--- a/hackathons/fuseLearn/home/fuseLearn.html
+++ b/hackathons/fuseLearn/home/fuseLearn.html
@@ -58,12 +58,12 @@
                     src="../images/flashcards.png"></img>
             </button>
             <button class="bigCentered" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
-                onclick="alert('Coding in progress...')">Citation Generator
+                onclick="location.href='../citations/citations.html'">Citation Maker
                 <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
                     src="../images/citations.png"></img>
             </button>
             <button class="bigCentered" style="animation: riseLoad 3s ease 0s 1 normal backwards;"
-                onclick="alert('Coding in progress...')">Launcher
+                onclick="location.href='../launcher/launcher.html'">Launcher
                 <img class="buttonIMG" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
                     src="../images/tools.png"></img>
             </button>
