--- a/hackathons/fuseLearn/launcher/launcher.html
+++ b/hackathons/fuseLearn/launcher/launcher.html
@@ -21,13 +21,57 @@
 <body>
     <img class="bgIMG" src="../images/mountainBG.jpg">
     <img class="back" src="../images/back.png" alt="Back" onclick="location.href='../home/fuseLearn.html'">
-    <div class="blurBox onTop"
-        style="width: 100vw; height: 100vh; left: 0; top: 0; margin: 0; border-radius: 0; box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);">
-        <img class="onTop back" src="../images/back.png" onclick="location.href='../home/fuseLearn.html'">
+    <div class="blurBox">
+        <div class="horizontalLayout" style="column-gap: 0;">
+            <div class="title">L</div>
+            <div class="title" style="animation: riseLoad 2s ease 0s 1 normal backwards;">a</div>
+            <div class="title" style="animation: riseLoad 3s ease 0s 1 normal backwards;">u</div>
+            <div class="title" style="animation: riseLoad 4s ease 0s 1 normal backwards;">n</div>
+            <div class="title" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;">c</div>
+            <div class="title" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;">h</div>
+            <div class="title" style="animation: riseLoad 4.75s ease 0s 1 normal backwards;">e</div>
+            <div class="title" style="animation: riseLoad 5s ease 0s 1 normal backwards;">r</div>
+        </div>
+        <div class="subTitle">Access useful external tools | Click a category</div>
 
-        <div class="title horizontalCenter" style="width: 68.75vw;">Launcher</div>
-
-        <p>Icons from https://icons8.com/</p>
+        <div>
+            <div class="heading" onclick="location.href='./launcherLinks/launcherLinks.html#General'">>General
+                Productivity
+                and
+                Collaboration
+            </div>
+            <div class="heading" style="animation: riseLoad 2s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html#Study'">>Study and
+                Flashcards
+            </div>
+            <div class="heading" style="animation: riseLoad 3s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html#Math'">>Math and
+                Science Resources
+            </div>
+            <div class="heading" style="animation: riseLoad 4s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html#ComputerScience'">>Coding
+                and
+                Computer Science
+            </div>
+            <div class="heading" style="animation: riseLoad 4.25s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html#Learning'">>Learning and
+                Test
+                Prep
+            </div>
+            <div class="heading" style="animation: riseLoad 4.5s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html#AI'">>AI Writing, Language,
+                and
+                Creativity Tools
+            </div>
+            <div class="heading" style="animation: riseLoad 4.75s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html#Multimedia'">>Multimedia and
+                Presentation Tools
+            </div>
+            <div class="heading"
+                style="font-weight: bolder; -webkit-text-stroke: 1px white; color: transparent; animation: riseLoad 5s ease 0s 1 normal backwards;"
+                onclick="location.href='./launcherLinks/launcherLinks.html'">>View All
+            </div>
+        </div>
     </div>
 </body>
 
