--- a/hackathons/fuseLearn/notepad/notepadFiles/notepadFiles.html
+++ b/hackathons/fuseLearn/notepad/notepadFiles/notepadFiles.html
@@ -49,7 +49,7 @@
         <br />
 
         <div class="horizontalLayout" style="column-gap: 20px;">
-            <ol id="file-list">
+            <ol style="cursor: pointer;" id="file-list">
             </ol>
             <ol style="list-style-type: '\1F552';" id="time-list">
             </ol>
