UI Updates + Removed insignificant projects

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
 <body>
   <div class="blurBox">
     <div class="horizontalLayout">
-      <div class="mainTitle" id="R">R</div>
-      <div class="mainTitle" id="I" style="animation: riseLoad 2s ease 0s 1 normal backwards;">I</div>
-      <div class="mainTitle" id="S" style="animation: riseLoad 2.3s ease 0s 1 normal backwards;">S</div>
-      <div class="mainTitle" id="H" style="animation: riseLoad 2.6s ease 0s 1 normal backwards;">H</div>
-      <div class="mainTitle" id="A" style="animation: riseLoad 2.9s ease 0s 1 normal backwards;">A</div>
-      <div class="mainTitle" id="A2" style="animation: riseLoad 3.2s ease 0s 1 normal backwards;">A</div>
-      <div class="mainTitle" id="N" style="animation: riseLoad 3.5s ease 0s 1 normal backwards;">N</div>
+      <div class="mainTitle">R</div>
+      <div class="mainTitle">I</div>
+      <div class="mainTitle">S</div>
+      <div class="mainTitle">H</div>
+      <div class="mainTitle">A</div>
+      <div class="mainTitle">A</div>
+      <div class="mainTitle">N</div>
     </div>
 
     <div class="horizontalLayout">
-      <div class="mainTitle hidden" id="K">K</div>
-      <div class="mainTitle hidden" id="O">O</div>
-      <div class="mainTitle hidden" id="T">T</div>
-      <div class="mainTitle hidden" id="I2">I</div>
-      <div class="mainTitle hidden" id="A3">A</div>
-      <div class="mainTitle hidden" id="N2">N</div>
-      <div class="mainTitle hidden" id=".">.</div>
+      <div class="mainTitle hidden">K</div>
+      <div class="mainTitle hidden">O</div>
+      <div class="mainTitle hidden">T</div>
+      <div class="mainTitle hidden">I</div>
+      <div class="mainTitle hidden">A</div>
+      <div class="mainTitle hidden">N</div>
+      <div class="mainTitle hidden">.</div>
     </div>
 
     <div class="horizontalLayout">
