--- a/projects.html
+++ b/projects.html
@@ -24,20 +24,20 @@
   <div class="blurBox">
     <div class="horizontalLayout">
       <div class="mainTitle">P</div>
-      <div class="mainTitle" style="animation: riseLoad 2s ease 0s 1 normal backwards;">R</div>
-      <div class="mainTitle" style="animation: riseLoad 2.3s ease 0s 1 normal backwards;">O</div>
-      <div class="mainTitle" style="animation: riseLoad 2.6s ease 0s 1 normal backwards;">J</div>
-      <div class="mainTitle" style="animation: riseLoad 2.9s ease 0s 1 normal backwards;">E</div>
-      <div class="mainTitle" style="animation: riseLoad 3.2s ease 0s 1 normal backwards;">C</div>
-      <div class="mainTitle" style="animation: riseLoad 3.5s ease 0s 1 normal backwards;">T</div>
-      <div class="mainTitle" style="animation: riseLoad 3.8s ease 0s 1 normal backwards;">S</div>
+      <div class="mainTitle">R</div>
+      <div class="mainTitle">O</div>
+      <div class="mainTitle">J</div>
+      <div class="mainTitle">E</div>
+      <div class="mainTitle">C</div>
+      <div class="mainTitle">T</div>
+      <div class="mainTitle">S</div>
     </div>
 
     <div class="bullet" onclick="location.href='index.html'">home</div>
 
     <div class="horizontalLayout projectContainer">
       <!-- clickity calculator -->
-      <div class="verticalLayout projectLayout">
+      <!-- <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/calculator.png">
         <div class="projectTitle" style="font-size: calc(1vh + 1vw);">clickity calculator</div>
         <div class="projectDetail">a basic calculator</div>
@@ -47,12 +47,12 @@
         <button class="basic" onclick="location.href='Replit/Calculator/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
-        <div class="postDetail">school group project</div>
-        <div class="postDetail">implemented better in fuseLearn</div>
-      </div>
+        <div class="postDetail">school group project • implemented better in fuseLearn</div>
+        <div class="postDetail"></div>
+      </div> -->
 
       <!-- jeopardy -->
-      <div class="verticalLayout projectLayout" style="animation: riseLoad 2s ease 0s 1 normal backwards;">
+      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 2s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/money.png">
         <div class="projectTitle">jeopardy</div>
         <div class="projectDetail">jeopardy game</div>
@@ -63,10 +63,10 @@
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
-      </div>
+      </div> -->
 
       <!-- cut the steak -->
-      <div class="verticalLayout projectLayout" style="animation: riseLoad 3s ease 0s 1 normal backwards;">
+      <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/steak.png">
         <div class="projectTitle">cut the steak</div>
         <div class="projectDetail">cooking game</div>
@@ -80,7 +80,7 @@
       </div>
 
       <!-- Tesla website -->
-      <div class="verticalLayout projectLayout" style="animation: riseLoad 4s ease 0s 1 normal backwards;">
+      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 4s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/car.png">
         <div class="projectTitle">Tesla website</div>
         <div class="projectDetail">Tesla website copy</div>
@@ -91,10 +91,10 @@
           <img class="buttonIMG" src="images/play.png">run
         </button>
         <div class="postDetail">school group project</div>
-      </div>
+      </div> -->
 
       <!-- to-do -->
-      <div class="verticalLayout projectLayout" style="animation: riseLoad 5s ease 0s 1 normal backwards;">
+      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 5s ease 0s 1 normal backwards;">
         <img class="projectIMG" src="images/tasks.png">
         <div class="projectTitle">to-do</div>
         <div class="projectDetail">to-do task website</div>
@@ -104,12 +104,11 @@
         <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
-        <div class="postDetail">school group project</div>
-        <div class="postDetail">implemented better in fuseLearn</div>
-      </div>
+        <div class="postDetail">school group project • implemented better in fuseLearn</div>
+      </div> -->
 
       <!-- fuseLearn -->
-      <div class="verticalLayout projectLayout" style="animation: riseLoad 6s ease 0s 1 normal backwards;">
+      <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/fuseLearn.png">
         <div class="projectTitle">fuseLearn</div>
         <div class="projectDetail">learning hub full of tools</div>
@@ -119,12 +118,11 @@
         <button class="basic" onclick="location.href='hackathons/fuseLearn/home/fuseLearn.html'">
           <img class="buttonIMG" src="images/play.png">run
         </button>
-        <div class="postDetail">hackathon project</div>
+        <div class="postDetail">hackathon</div>
       </div>
 
       <!-- misc -->
-      <div class="verticalLayout projectLayout"
-        style="outline: solid white; animation: riseLoad 7s ease 0s 1 normal backwards;">
+      <div class="verticalLayout projectLayout" style="background-color: rgba(255, 255, 255, 0.07);">
         <img class="projectIMG" src="images/more.png">
         <div class="projectTitle">more</div>
         <div class="projectDetail">misc. projects</div>
