--- a/projects.html
+++ b/projects.html
@@ -36,88 +36,30 @@
     <div class="bullet" onclick="location.href='index.html'">home</div>
 
     <div class="horizontalLayout projectContainer">
-      <!-- clickity calculator -->
-      <!-- <div class="verticalLayout projectLayout">
-        <img class="projectIMG" src="images/calculator.png">
-        <div class="projectTitle" style="font-size: calc(1vh + 1vw);">clickity calculator</div>
-        <div class="projectDetail">a basic calculator</div>
-        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
-          <img class="buttonIMG" src="images/replit.png">Replit
-        </button>
-        <button class="basic" onclick="location.href='Replit/Calculator/index.html'">
-          <img class="buttonIMG" src="images/play.png">run
-        </button>
-        <div class="postDetail">school group project • implemented better in fuseLearn</div>
-        <div class="postDetail"></div>
-      </div> -->
-
-      <!-- jeopardy -->
-      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 2s ease 0s 1 normal backwards;">
-        <img class="projectIMG" src="images/money.png">
-        <div class="projectTitle">jeopardy</div>
-        <div class="projectDetail">jeopardy game</div>
-        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
-          <img class="buttonIMG" src="images/replit.png">Replit
-        </button>
-        <button class="basic" onclick="location.href='Replit/Jeopardy/index.html'">
-          <img class="buttonIMG" src="images/play.png">run
-        </button>
-        <div class="postDetail">school group project</div>
-      </div> -->
-
       <!-- cut the steak -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/steak.png">
         <div class="projectTitle">cut the steak</div>
         <div class="projectDetail">cooking game</div>
-        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Lets-Cut-the-Steak'">
-          <img class="buttonIMG" src="images/replit.png">Replit
-        </button>
-        <button class="basic" onclick="location.href='Replit/Steak/index.html'">
-          <img class="buttonIMG" src="images/play.png">run
-        </button>
+        <div class="horizontalLayout">
+          <img class="buttonIMG replit" src="images/replit.png"
+            onclick="window.open('https://replit.com/@JamesGouw/Lets-Cut-the-Steak', '_blank')">
+          <img class="buttonIMG" src="images/play.png" onclick="window.open('Replit/Steak/index.html', '_blank')">
+        </div>
         <div class="postDetail">school group project</div>
       </div>
-
-      <!-- Tesla website -->
-      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 4s ease 0s 1 normal backwards;">
-        <img class="projectIMG" src="images/car.png">
-        <div class="projectTitle">Tesla website</div>
-        <div class="projectDetail">Tesla website copy</div>
-        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
-          <img class="buttonIMG" src="images/replit.png">Replit
-        </button>
-        <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
-          <img class="buttonIMG" src="images/play.png">run
-        </button>
-        <div class="postDetail">school group project</div>
-      </div> -->
-
-      <!-- to-do -->
-      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 5s ease 0s 1 normal backwards;">
-        <img class="projectIMG" src="images/tasks.png">
-        <div class="projectTitle">to-do</div>
-        <div class="projectDetail">to-do task website</div>
-        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
-          <img class="buttonIMG" src="images/replit.png">Replit
-        </button>
-        <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
-          <img class="buttonIMG" src="images/play.png">run
-        </button>
-        <div class="postDetail">school group project • implemented better in fuseLearn</div>
-      </div> -->
 
       <!-- fuseLearn -->
       <div class="verticalLayout projectLayout">
         <img class="projectIMG" src="images/fuseLearn.png">
         <div class="projectTitle">fuseLearn</div>
         <div class="projectDetail">learning hub full of tools</div>
-        <button class="basic" onclick="location.href='https://foresthacks.devpost.com'">
-          <img class="buttonIMG" src="images/link.png">hackathon
-        </button>
-        <button class="basic" onclick="location.href='hackathons/fuseLearn/home/fuseLearn.html'">
-          <img class="buttonIMG" src="images/play.png">run
-        </button>
+        <div class="horizontalLayout">
+          <img class="buttonIMG" src="images/link.png"
+            onclick="window.open('https://foresthacks.devpost.com', '_blank')">
+          <img class="buttonIMG" src="images/play.png"
+            onclick="window.open('hackathons/fuseLearn/home/fuseLearn.html', '_blank')">
+        </div>
         <div class="postDetail">hackathon</div>
       </div>
 
@@ -126,19 +68,76 @@
         <img class="projectIMG" src="images/more.png">
         <div class="projectTitle">more</div>
         <div class="projectDetail">misc. projects</div>
-        <button class="replit" onclick="location.href='https://replit.com/@RishaanKotian/'">
-          <img class="buttonIMG" src="images/replit.png">Rishaan Replit
-        </button>
-        <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/'">
-          <img class="buttonIMG" src="images/replit.png">James Replit
-        </button>
-        <button class="github" onclick="location.href='https://github.com/rishaank'">
-          <img class="buttonIMG" src="images/github-icon.png">Rishaan Github
-        </button>
+        <div class="horizontalLayout">
+          <img class="buttonIMG replit" src="images/replit.png"
+            onclick="window.open('https://replit.com/@RishaanKotian/', '_blank')">
+          <img class="buttonIMG replit" src="images/replit.png"
+            onclick="window.open('https://replit.com/@JamesGouw/', '_blank')">
+          <img class="buttonIMG github" src="images/github-icon.png"
+            onclick="window.open('https://github.com/rishaank', '_blank')">
+        </div>
       </div>
+
+      <!-- clickity calculator -->
+      <!-- <div class="verticalLayout projectLayout">
+              <img class="projectIMG" src="images/calculator.png">
+              <div class="projectTitle" style="font-size: calc(1vh + 1vw);">clickity calculator</div>
+              <div class="projectDetail">a basic calculator</div>
+              <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Clickity-Calculator'">
+                <img class="buttonIMG" src="images/replit.png">Replit
+              </button>
+              <button class="basic" onclick="location.href='Replit/Calculator/index.html'">
+                <img class="buttonIMG" src="images/play.png">run
+              </button>
+              <div class="postDetail">school group project • implemented better in fuseLearn</div>
+              <div class="postDetail"></div>
+            </div> -->
+
+      <!-- jeopardy -->
+      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 2s ease 0s 1 normal backwards;">
+              <img class="projectIMG" src="images/money.png">
+              <div class="projectTitle">jeopardy</div>
+              <div class="projectDetail">jeopardy game</div>
+              <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Jeopardy?v=1'">
+                <img class="buttonIMG" src="images/replit.png">Replit
+              </button>
+              <button class="basic" onclick="location.href='Replit/Jeopardy/index.html'">
+                <img class="buttonIMG" src="images/play.png">run
+              </button>
+              <div class="postDetail">school group project</div>
+            </div> -->
+      <!-- Tesla website -->
+      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 4s ease 0s 1 normal backwards;">
+              <img class="projectIMG" src="images/car.png">
+              <div class="projectTitle">Tesla website</div>
+              <div class="projectDetail">Tesla website copy</div>
+              <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
+                <img class="buttonIMG" src="images/replit.png">Replit
+              </button>
+              <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
+                <img class="buttonIMG" src="images/play.png">run
+              </button>
+              <div class="postDetail">school group project</div>
+            </div> -->
+
+      <!-- to-do -->
+      <!-- <div class="verticalLayout projectLayout" style="animation: riseLoad 5s ease 0s 1 normal backwards;">
+              <img class="projectIMG" src="images/tasks.png">
+              <div class="projectTitle">to-do</div>
+              <div class="projectDetail">to-do task website</div>
+              <button class="replit" onclick="location.href='https://replit.com/@JamesGouw/Tesla-Website?v=1'">
+                <img class="buttonIMG" src="images/replit.png">Replit
+              </button>
+              <button class="basic" onclick="location.href='Replit/Tesla/index.html'">
+                <img class="buttonIMG" src="images/play.png">run
+              </button>
+              <div class="postDetail">school group project • implemented better in fuseLearn</div>
+            </div> -->
     </div>
 
-    <div class="footer">Some Icons from https://icons8.com/</div>
+    <div class="footer">
+      Icons from <a href="https://icons8.com/" target="_blank">Icons8</a>
+    </div>
   </div>
 </body>
 
