added mathbites + about section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </div>
 
     <div class="horizontalLayout">
-      <div class="bullet" onclick="location.href='projects.html'">projects</div>
+      <a class="bullet" href="projects.html">projects</a>
       <div class="blankBullet">•</div>
-      <div class="bullet" id="about" onclick="comingSoon()">about</div>
+      <a class="bullet" href="about.html">about</a>
     </div>
     <div class="blankBullet" id="hint">try: hovering over all of rishaan</div>
   </div>
