--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,11 @@
       <div class="mainTitle">S</div>
     </div>
 
-    <div class="bullet" onclick="location.href='index.html'">home</div>
+    <div class="horizontalLayout">
+      <a class="bullet" href="index.html">home</a>
+      <div class="blankBullet">•</div>
+      <a class="bullet" href="about.html">about</a>
+    </div>
 
     <div class="horizontalLayout projectContainer">
       <!-- cut the steak -->
@@ -59,6 +63,20 @@
             onclick="window.open('https://foresthacks.devpost.com', '_blank')">
           <img class="buttonIMG" src="images/play.png"
             onclick="window.open('hackathons/fuseLearn/home/fuseLearn.html', '_blank')">
+        </div>
+        <div class="postDetail">hackathon</div>
+      </div>
+
+      <!-- Math Bites -->
+      <div class="verticalLayout projectLayout">
+        <img class="projectIMG" src="hackathons/MathBites/images/MathBitesTransparent.png">
+        <div class="projectTitle">Math Bites</div>
+        <div class="projectDetail">engaging cooking game that teaches math</div>
+        <div class="horizontalLayout">
+          <img class="buttonIMG" src="images/link.png"
+            onclick="window.open('https://devpost.com/software/mathbites', '_blank')">
+          <img class="buttonIMG" src="images/play.png"
+            onclick="window.open('hackathons/MathBites/welcome/index.html', '_blank')">
         </div>
         <div class="postDetail">hackathon</div>
       </div>
