Updated Portfolio, New Favicon for SpectraSurf

--- a/projects.html
+++ b/projects.html
@@ -81,6 +81,31 @@
         <div class="postDetail">hackathon</div>
       </div>
 
+      <!-- SpectraSurf -->
+      <div class="verticalLayout projectLayout">
+        <img class="projectIMG" style="overflow: hidden; object-fit: cover; border-radius: 100px;"
+          src="hackathons/SpectraSurf/SpectraSurfFavicon.jpeg">
+        <div class="projectTitle">SpectraSurf</div>
+        <div class="projectDetail">take informed political action, browse live, reputed, news headlines with bias
+          detection built in. |
+          Mobile Friendly
+        </div>
+        <div class="horizontalLayout">
+          <script>
+            function notReadyMessage() {
+              if (confirm("The project is not publicly viewable at the moment, click OK to navigate to the Hackathon Post.")) {
+                window.open('https://valleyhacks2026.devpost.com', '_blank');
+              }
+            }
+          </script>
+          <img class="buttonIMG" src="images/link.png" onclick="notReadyMessage()">
+          <img class="buttonIMG" src="images/play.png"
+            onclick="window.open('hackathons/SpectraSurf/index.html', '_blank')">
+        </div>
+        <div class="postDetail">hackathon</div>
+        <div class="postDetail" style="color: gold;">2nd Place Winner (of 60)</div>
+      </div>
+
       <!-- misc -->
       <div class="verticalLayout projectLayout" style="background-color: rgba(255, 255, 255, 0.07);">
         <img class="projectIMG" src="images/more.png">
