--- a/hackathons/SpectraSurf/index.html
+++ b/hackathons/SpectraSurf/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpectraSurf</title>
-    <link rel="icon" type="image/x-icon" href="SpectraSurf.png">
+    <link rel="icon" type="image/x-icon" href="SpectraSurfFavicon.jpeg">
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
