Improve responsive design and update content
Enhanced mobile responsiveness across about, home, and projects pages by refining CSS media queries and layout styles. Updated about page content and icon sources, improved project descriptions and details, and added new animation effects to the home page. Various minor UI/UX improvements and code cleanups were also made.

--- a/about.html
+++ b/about.html
@@ -39,51 +39,45 @@
         <div class="horizontalInfobox">
             <img class="mainIMG" src="images/person.png">
             <div class="verticalLayout">
-                <div class="blankBullet" style="margin: 0 100px 20px 100px;">I am a Freshman at Bellarmine College Prep.
-                    I
-                    am
-                    passionate about technology and enjoy working on coding projects. I have experience
-                    working with various programming languages and tools, and I am always looking to learn more. I used
-                    to
-                    play piano, I swim on the Bellarmine team, and am a Boy Scout.</div>
-                <div class="blankBullet">Here's some languages I've tried, but I am
-                    mainly fluent in web development:</div>
-                <div class="horizontalLayout" style="margin-top: 20px;">
+                <div class="blankBullet infoText">I'm a Sophomore at Bellarmine
+                    College Prep.
+                    I love to mess around with tech and learn new things on my own.</div>
+                <div class="blankBullet infoText">Here's some languages I've tried, but I mainly work in Web Development
+                    and
+                    Python for now:</div>
+                <div class="horizontalLayout iconRow" style="margin-top: 20px;">
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/2ae2a900d2f041da66e950e4d48052658d850630/icons/c/c-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/c/c-original.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/2ae2a900d2f041da66e950e4d48052658d850630/icons/csharp/csharp-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/2ae2a900d2f041da66e950e4d48052658d850630/icons/unity/unity-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/unity/unity-original.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/2ae2a900d2f041da66e950e4d48052658d850630/icons/dot-net/dot-net-original-wordmark.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dot-net/dot-net-original-wordmark.svg" />
                     <img class="smallIMG"
-                        src="https://camo.githubusercontent.com/d1652ce9d9e41d898ea03bd8772e8accb903947dc6bba2a410d76462f7d63d1b/68747470733a2f2f63646e2e6a7364656c6976722e6e65742f67682f64657669636f6e732f64657669636f6e2f69636f6e732f707974686f6e2f707974686f6e2d6f726967696e616c2e737667" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/ca28c779441053191ff11710fe24a9e6c23690d6/icons/html5/html5-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/ca28c779441053191ff11710fe24a9e6c23690d6/icons/javascript/javascript-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/ca28c779441053191ff11710fe24a9e6c23690d6/icons/css3/css3-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/ca28c779441053191ff11710fe24a9e6c23690d6/icons/xcode/xcode-original.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/xcode/xcode-original.svg" />
                     <img class="smallIMG"
-                        src="https://raw.githubusercontent.com/devicons/devicon/ca28c779441053191ff11710fe24a9e6c23690d6/icons/arduino/arduino-original-wordmark.svg" />
+                        src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/arduino/arduino-original-wordmark.svg" />
                 </div>
 
             </div>
         </div>
-        <!-- <img class="projectIMG" src="images/steak.png">
-            <div class="projectTitle">cut the steak</div>
-            <div class="projectDetail">cooking game</div>
-            <div class="horizontalLayout">
-                <img class="buttonIMG" src="images/play.png" onclick="window.open('Replit/Steak/index.html', '_blank')">
-            </div>
-            <div class="postDetail">school group project</div>
-        </div> -->
 
-        <div class="footer">
-            Icons from <a href="https://icons8.com/" target="_blank">Icons8</a>
+        <div class="footer hideMobile">
+            Icons from <a href="https://icons8.com/" target="_blank">Icons8</a> + <a href="https://devicon.dev/"
+                target="_blank">Devicons</a>
+        </div>
+
+        <div class="footer showMobile">
+            Icons from <a href="https://devicon.dev/" target="_blank">Devicons</a>
         </div>
     </div>
 </body>
