--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="mainTitle">N</div>
     </div>
 
-    <div class="horizontalLayout">
+    <div class="horizontalLayout hiddenBox">
       <div class="mainTitle hidden">K</div>
       <div class="mainTitle hidden">O</div>
       <div class="mainTitle hidden">T</div>
@@ -42,7 +42,7 @@
       <div class="mainTitle hidden">.</div>
     </div>
 
-    <div class="horizontalLayout">
+    <div class="horizontalLayout shiftDown">
       <a class="bullet" href="projects.html">projects</a>
       <div class="blankBullet">•</div>
       <a class="bullet" href="about.html">about</a>
