Remove shiftDown padding adjustment and class
Eliminated dynamic paddingTop modification for the .shiftDown element in home.js and removed the shiftDown class from index.html to simplify layout handling.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="mainTitle hidden">.</div>
     </div>
 
-    <div class="horizontalLayout shiftDown">
+    <div class="horizontalLayout">
       <a class="bullet" href="projects.html">projects</a>
       <div class="blankBullet">•</div>
       <a class="bullet" href="about.html">about</a>
